traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:31: error: not found: value postionFinale
  if (postionFinale()==false){
      ^