traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  
  while (positionFinale()==false){
    avance(6)
    pasDeSerpent()
  }

}

def positionFinale() : Boolean={
  if (estFaceMur()==true){
    if (getDirection()==Direction.EST){
      gauche()
      if(estFaceMur()==true){
        droite()
        return true
      }
    }else if (getDirection()==Direction.OUEST){
      droite()
      if (estFaceMur()==true){
        gauche()
        return true
      }
    }
  }
  return false
}

def pasDeSerpent() {
  if (postionFinale()==false){
    if (getDirection()==Direction.EST){
    gauche()
    avance()
    gauche()
    
  } else if (getDirection()==Direction.OUEST) {
    droite()
    avance()
    droite()
   
  }
  
    
  }
}